# Digit-Sum-Challenge

./: CMakeLists.txt  README.md  functions.cpp  main.cpp  tests.cpp
lib/: CMakeLists.txt
